--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "js-project",
   "version": "1.0.0",
-  "description": "",
   "main": "project.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,15 @@
   "license": "ISC",
   "dependencies": {
     "prompt-sync": "^4.2.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KinlieVenice/JAVASCRIPT_SlotMachine.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KinlieVenice/JAVASCRIPT_SlotMachine/issues"
+  },
+  "homepage": "https://github.com/KinlieVenice/JAVASCRIPT_SlotMachine#readme",
+  "description": ""
 }
